Fix gen AI background color in dark mode

--- a/src/components/ids-button/ids-button-base.scss
+++ b/src/components/ids-button/ids-button-base.scss
@@ -313,8 +313,8 @@
       width: 3px;
       height: 3px;
       border-radius: 5px;
-      background-color: #FFF;
-      color: #FFF;
+      background-color: var(--ids-button-ai-color-loading-dot-default);
+      color:  var(--ids-button-ai-color-loading-dot-default);
     }
   }
 
@@ -380,11 +380,11 @@
       background-clip: text;
       border-color: transparent;
       -webkit-text-fill-color: transparent;
+    }
 
-      ::slotted(ids-icon[icon="insights-smart-panel"]) {
-        --ids-button-ai-color-icon-primary: var(--ids-button-ai-color-icon-primary-hover);
-        --ids-button-ai-color-icon-secondary: var(--ids-button-ai-color-icon-secondary-hover);
-      }
+    ::slotted(ids-icon[icon="insights-smart-panel"]) {
+      --ids-button-ai-color-icon-primary: var(--ids-button-ai-color-icon-primary-hover);
+       --ids-button-ai-color-icon-secondary: var(--ids-button-ai-color-icon-secondary-hover);
     }
 
     &:active
