--- a/src/themes/default/ids-theme-default-core.scss
+++ b/src/themes/default/ids-theme-default-core.scss
@@ -426,6 +426,7 @@
   --ids-button-ai-opacity-disabled: 0.4;
   --ids-button-tertiary-ai-color-background-disabled: var(--ids-button-ai-color-background-default);
   --ids-button-tertiary-ai-shadow-focus: 0px 0px 0px 1px #058F81, 0px 0px 0px 1px #051E4C;
+  --ids-button-ai-color-loading-dot-default: var(--ids-color-white-100);
 
   // Breadcrumb
   --ids-breadcrumb-color-text-default: var(--ids-color-text-subtle);
