--- a/src/themes/default/ids-theme-default-dark.scss
+++ b/src/themes/default/ids-theme-default-dark.scss
@@ -100,8 +100,11 @@
 
   // Button (Generative AI)
   --ids-button-ai-color-border-hover: transparent;
-  --ids-button-ai-color-background-default: linear-gradient(107deg, #254A92 9.32%, #10B7A6 85.32%);
-  --ids-button-ai-color-background-hover: linear-gradient(107deg, #1F405C 5.32%, #0EAA9B 75.32%);
+  --ids-button-ai-color-background-default: linear-gradient(107deg, #10B6A6 17.32%, #0EAA9B 95.32%);
+  --ids-button-ai-color-background-hover: var(--ids-button-ai-color-background-default);
+  --ids-button-ai-color-icon-primary-hover: #10B6A6;
+  --ids-button-ai-color-icon-secondary-hover: #10B6A6;
+  --ids-button-ai-color-loading-dot-default: #10B6A6;
 
   // Button (Tertiary)
   --ids-button-tertiary-color-background-hover: var(--ids-color-accent-gray-weaker);
